--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "webpack2",
-  "version": "1.0.0",
+  "name": "webpack-react-lib-starter",
+  "version": "0.1.0",
   "description": "",
   "main": "dist/bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server",
-    "build": "rimraf dist && webpack --watch"
+    "dev": "NODE_ENV=dev webpack-dev-server",
+    "build": "rimraf dist && NODE_ENV=prod webpack --watch"
   },
   "author": "Arun Ghosh",
   "license": "ISC",
