--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-sequence",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "",
   "main": "dist/bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "NODE_ENV=dev webpack-dev-server",
     "build": "rimraf dist && eslint ./src && NODE_ENV=prod webpack"
   },
@@ -16,12 +16,14 @@
     "babel-loader": "^6.4.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "enzyme": "^2.7.1",
     "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
     "jest": "^19.0.2",
+    "react-addons-test-utils": "^15.4.2",
     "react-test-renderer": "^15.4.2",
     "rimraf": "^2.6.1",
     "webpack": "^2.2.1",
