--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "jest": "^19.0.2",
     "react-addons-test-utils": "^15.4.2",
     "react-test-renderer": "^15.4.2",
@@ -29,8 +31,8 @@
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
-  "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+  "peerDependencies": {
+    "react": "^0.14.0 || ^15.4.2",
+    "react-dom": "^0.14.0 || ^15.4.2"
   }
 }
